# cucumber

./: .gitignore  CMakeLists.txt  DOCKER.MD  Dockerfile  lab2.cpp  main.c  main.h  stack.c  users.ini
calculator/: CMakeLists.txt  calculator.c
gui/: .mainwindow.cpp.swp  .mainwindow.h.swp  CMakeLists.txt  authmanager.cpp  authmanager.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h
projects/: CMakeLists.txt  calculator.cpp  node.h  queue.cpp  stack.cpp  test.h
structures/: test.h
structures/queue/: .main.cpp.swp  CMakeLists.txt  main.cpp  queue.cpp  queue.h
structures/stack/: CMakeLists.txt  main.cpp  stack.cpp  stack.h
